--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.firebase:firebase-auth:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
 
     testCompile 'junit:junit:4.12'
 }
